tests/models/struct/unnamed/u8/pass/gt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(gt = 2)]
    u8
);
fn main() {}
